--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,30 @@
     "issues": "https://github.com/kaisekidev/scaffold-wp-module/issues",
     "source": "https://github.com/kaisekidev/scaffold-wp-module"
   },
+  "require": {
+    "php": "^8.1",
+    "kaiseki/config": "dev-master",
+    "kaiseki/wp-hook": "dev-master",
+    "psr/container": "^1.1",
+    "thecodingmachine/safe": "^1.3"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.21",
+    "kaiseki/php-coding-standard": "dev-master",
+    "maglnet/composer-require-checker": "^3.5",
+    "php-stubs/wordpress-stubs": "^6.2",
+    "phpstan/extension-installer": "^1.3",
+    "phpstan/phpstan": "^1.2",
+    "phpstan/phpstan-phpunit": "^1.0",
+    "phpstan/phpstan-strict-rules": "^1.1",
+    "phpunit/phpunit": "^9.5",
+    "roave/security-advisories": "dev-latest",
+    "roots/wordpress-core-installer": "*",
+    "roots/wordpress-no-content": "@stable",
+    "squizlabs/php_codesniffer": "^3.7.1",
+    "szepeviktor/phpstan-wordpress": "^1.3",
+    "thecodingmachine/phpstan-safe-rule": "^1.1"
+  },
   "autoload": {
     "psr-4": {
       "Kaiseki\\WordPress\\ScaffoldModule\\": "src",
@@ -44,51 +68,48 @@
       "Kaiseki\\Test\\Unit\\WordPress\\ModuleName\\": "tests/unit"
     }
   },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "phpstan/extension-installer": true,
+      "roots/wordpress-core-installer": true,
+      "composer/installers": true
+    },
+    "process-timeout": 0
+  },
   "repositories": [
     {
       "type": "composer",
-      "url": "https://wpackagist.org"
+      "url": "https://wpackagist.org",
+      "only": [
+        "wpackagist-plugin/*"
+      ]
     }
   ],
-  "require": {
-    "php": "^7.4",
-    "ext-json": "*",
-    "kaiseki/wp-config": "^1.0",
-    "kaiseki/wp-hook": "^1.0",
-    "psr/container": "^1.1",
-    "thecodingmachine/safe": "^1.3"
-  },
-  "require-dev": {
-    "composer/composer": "^2.0",
-    "eventjet/coding-standard": "^3.2",
-    "laminas/laminas-filter": "^2.9",
-    "maglnet/composer-require-checker": "^3.5",
-    "php-stubs/wordpress-stubs": "^5.8",
-    "phpstan/extension-installer": "^1.1",
-    "phpstan/phpstan": "^1.2",
-    "phpstan/phpstan-phpunit": "^1.0",
-    "phpstan/phpstan-strict-rules": "^1.1",
-    "phpunit/phpunit": "^9.5",
-    "szepeviktor/phpstan-wordpress": "^1.0",
-    "thecodingmachine/phpstan-safe-rule": "^1.0"
-  },
-  "config": {
-    "sort-packages": true
-  },
   "minimum-stability": "stable",
+  "extra": {
+    "wordpress-install-dir": "vendor/wordpress/wordpress",
+    "installer-paths": {
+      "vendor/wordpress/plugins/{$name}/": ["type:wordpress-plugin"]
+    }
+  },
   "scripts": {
     "post-create-project-cmd": "Kaiseki\\WordPress\\ScaffoldModule\\RunTasks::init",
     "check": [
-      "@check-deps",
       "@cs-check",
-      "@phpstan",
-      "@phpunit"
+      "@phpstan"
     ],
-    "check-deps": "vendor/bin/composer-require-checker check --config-file=require-checker.config.json",
-    "cs-check": "vendor/bin/phpcs",
+    "fix": [
+      "@cs-fix",
+      "@cs-fixer"
+    ],
+    "check-deps": "vendor/bin/composer-require-checker --config-file=require-checker.config.json",
+    "cs-check": "vendor/bin/phpcs -s",
     "cs-fix": "vendor/bin/phpcbf",
-    "phpstan": "vendor/bin/phpstan analyse",
-    "phpstan-pro": "vendor/bin/phpstan analyse --pro",
+    "cs-fixer": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php",
+    "phpstan": "vendor/bin/phpstan analyse --memory-limit 1G",
+    "phpstan-pro": "vendor/bin/phpstan analyse --pro --memory-limit 1G",
     "phpunit": "vendor/bin/phpunit"
   }
 }
