--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,9 @@
   },
   "require": {
     "php": "^8.1",
-    "composer/composer": "^2.6",
     "kaiseki/config": "dev-master",
     "kaiseki/wp-hook": "dev-master",
-    "psr/container": "^1.1",
-    "thecodingmachine/safe": "^1.3"
+    "psr/container": "^1.1 || ^2.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.21",
@@ -54,9 +52,7 @@
     "roave/security-advisories": "dev-latest",
     "roots/wordpress-core-installer": "*",
     "roots/wordpress-no-content": "@stable",
-    "squizlabs/php_codesniffer": "^3.7.1",
-    "szepeviktor/phpstan-wordpress": "^1.3",
-    "thecodingmachine/phpstan-safe-rule": "^1.1"
+    "szepeviktor/phpstan-wordpress": "^1.3"
   },
   "autoload": {
     "psr-4": {
@@ -73,7 +69,6 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
       "phpstan/extension-installer": true,
       "roots/wordpress-core-installer": true,
       "composer/installers": true
@@ -102,16 +97,10 @@
       "@cs-check",
       "@phpstan"
     ],
-    "fix": [
-      "@cs-fix",
-      "@cs-fixer"
-    ],
-    "check-deps": "vendor/bin/composer-require-checker --config-file=require-checker.config.json",
-    "cs-check": "vendor/bin/phpcs -s",
-    "cs-fix": "vendor/bin/phpcbf",
-    "cs-fixer": "vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php",
-    "phpstan": "vendor/bin/phpstan analyse --memory-limit 1G",
-    "phpstan-pro": "vendor/bin/phpstan analyse --pro --memory-limit 1G",
-    "phpunit": "vendor/bin/phpunit"
+    "check-deps": "composer-require-checker --config-file=require-checker.config.json",
+    "cs-check": "php-cs-fixer fix --dry-run",
+    "cs-fix": "php-cs-fixer fix --allow-risky=yes",
+    "phpstan": "phpstan analyse --memory-limit 1G",
+    "phpunit": "phpunit"
   }
 }
