--- a/templates/wordpress/composer.json
+++ b/templates/wordpress/composer.json
@@ -1,13 +1,9 @@
 {
-  "name": "kaiseki/scaffold-module",
-  "type": "project",
-  "description": "Scaffold a kaiseki module",
-  "keywords": [
-    "wordpress",
-    "module"
-  ],
-  "license": "proprietary",
-  "homepage": "https://github.com/kaisekidev/scaffold-wp-module",
+  "name": "kaiseki/%package_name_dash%",
+  "type": "library",
+  "description": "",
+  "license": "MIT",
+  "homepage": "%repo_url%",
   "authors": [
     {
       "name": "Kaiseki",
@@ -17,38 +13,46 @@
     }
   ],
   "support": {
-    "issues": "https://github.com/kaisekidev/scaffold-wp-module/issues",
-    "source": "https://github.com/kaisekidev/scaffold-wp-module"
+    "issues": "%repo_url%/issues",
+    "source": "%repo_url%"
   },
   "require": {
-    "php": "^8.1",
-    "symfony/console": "^7.1"
+    "php": ">=8.2",
+    "kaiseki/config": "dev-master",
+    "kaiseki/wp-hook": "dev-master",
+    "psr/container": "^1.1 || ^2.0"
   },
   "require-dev": {
+    "bnf/phpstan-psr-container": "^1.0",
     "friendsofphp/php-cs-fixer": "^3.21",
     "kaiseki/php-coding-standard": "dev-master",
-    "laminas/laminas-filter": "^2.34",
+    "php-stubs/wordpress-stubs": "^6.2",
     "phpstan/extension-installer": "^1.3",
     "phpstan/phpstan": "^1.2",
     "phpstan/phpstan-phpunit": "^1.0",
     "phpstan/phpstan-strict-rules": "^1.1",
     "phpunit/phpunit": "^9.5",
-    "roave/security-advisories": "dev-latest"
-  },
-  "autoload": {
-    "psr-4": {
-      "Kaiseki\\ScaffoldModule\\": "src"
-    }
+    "roave/security-advisories": "dev-latest",
+    "szepeviktor/phpstan-wordpress": "^1.3"
   },
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "composer/installers": true,
-      "dealerdirect/phpcodesniffer-composer-installer": true,
       "phpstan/extension-installer": true,
-      "roots/wordpress-core-installer": true
+      "composer/installers": true
     },
     "process-timeout": 0
+  },
+  "autoload": {
+    "psr-4": {
+      "Kaiseki\\WordPress\\%namespace%\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Kaiseki\\Test\\Functional\\WordPress\\%namespace%\\": "tests/functional",
+      "Kaiseki\\Test\\Unit\\WordPress\\%namespace%\\": "tests/unit"
+    }
   },
   "repositories": [
     {
@@ -59,18 +63,14 @@
       ]
     }
   ],
-  "minimum-stability": "stable",
   "extra": {
     "wordpress-install-dir": "vendor/wordpress/wordpress",
     "installer-paths": {
       "vendor/wordpress/plugins/{$name}/": ["type:wordpress-plugin"]
     }
   },
+  "minimum-stability": "stable",
   "scripts": {
-    "post-create-project-cmd": [
-      "Kaiseki\\ScaffoldModule\\CreateProjectCommand",
-      "@composer update"
-    ],
     "check": [
       "@cs-check",
       "@phpstan",
@@ -79,7 +79,6 @@
     "cs-check": "php-cs-fixer fix --dry-run",
     "cs-fix": "php-cs-fixer fix --allow-risky=yes",
     "phpstan": "phpstan analyse --memory-limit 1G",
-    "phpunit": "phpunit",
-    "test": "Kaiseki\\ScaffoldModule\\CreateProjectCommand",
+    "phpunit": "phpunit"
   }
 }
