--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,6 @@
     "cs-fix": "php-cs-fixer fix --allow-risky=yes",
     "phpstan": "phpstan analyse --memory-limit 1G",
     "phpunit": "phpunit",
-    "test": "Kaiseki\\ScaffoldModule\\CreateProjectCommand",
+    "test": "Kaiseki\\ScaffoldModule\\CreateProjectCommand"
   }
 }
