--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "kaiseki/scaffold-module",
+  "name": "kaiseki/wp-scaffold-module",
   "type": "project",
   "description": "Scaffold a kaiseki module",
   "keywords": [
